Set check value in ConfirmCheck even if cancel is pressed. b=218021 r=adamlock sr=bzbarsky