embedding/components/windowwatcher/src/nsPromptService.cpp
@@ -255,10 +255,8 @@ nsPromptService::ConfirmCheck(nsIDOMWindow *parent,
   block->GetInt(eButtonPressed, &tempInt);
   *_retval = tempInt ? PR_FALSE : PR_TRUE;
 
-  if (*_retval) {
-    block->GetInt(eCheckboxState, & tempInt);
-    *checkValue = PRBool( tempInt );
-  }
+  block->GetInt(eCheckboxState, & tempInt);
+  *checkValue = PRBool( tempInt );
   
   return rv;
 }
